learned something new

--- a/challenges/challenge-1/index.html
+++ b/challenges/challenge-1/index.html
@@ -10,9 +10,25 @@
 </head>
 
 <body>
-    <img src="AMANDA26219 o.png" alt="image">
-    <p>MVP 2022</p>
-    <h1>Amanda Serrano</h1>
+    <section>
+        <div class="girl">
+
+        </div>
+        <div class="circle">
+            <span style="--i:1">H</span>
+            <span style="--i:2">e</span>
+            <span style="--i:3">e</span>
+            <span style="--i:4">l</span>
+            <span style="--i:5">l</span>
+            <span style="--i:6">o</span>
+            <span style="--i:7">&nbsp;</span>
+            <span style="--i:8">W</span>
+            <span style="--i:9">o</span>
+            <span style="--i:10">r</span>
+            <span style="--i:11">l</span>
+            <span style="--i:12">d</span>
+        </div>
+    </section>
 </body>
 
 </html>
